# hudcon

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: cpu.rs  disk.rs  dotnet.rs  gpu.rs  lib.rs  lscpu.rs  machine.rs  main.rs  memory.rs  nodejs.rs  package.rs  path.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
tests/: cpu_arch.rs  lscpu.rs
ui/: index.html
ui/src/: main.ts  styles.css  views.ts
