[workspace]
members = [".", "src-tauri"]
resolver = "2"
default-members = ["."]

[package]
name = "hudcon"
version = "0.1.0"
edition = "2021"
description = "Simple CLI for basic CPU information"

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["events"] }
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.33"

[dev-dependencies]
sysinfo = "0.33"
