[package]
name = "hudcon-tauri"
version = "0.1.0"
description = "HUDcon desktop shell"
edition = "2021"

[lib]
name = "hudcon_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
hudcon = { path = ".." }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
